Mas cosas traducidas

--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -61,7 +61,7 @@
           <li>
             <a href="/admin/specs" class="<%= req.originalUrl === '/admin/specs' ? 'active' : '' %>">
               <i class="fas fa-sliders-h"></i>
-              <span>Gestión de Especificaciones</span>
+              <span>Gestión de specs</span>
             </a>
           </li>
           <% } %>
