--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -76,7 +76,7 @@ document.querySelector(".tablink").click();
                                             <%= product.category === 'moviles' ? 'Móviles' : product.category.charAt(0).toUpperCase() + product.category.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= product.nombre %> <%= product.especificaciones %>
+                                                <%= product.nombre %> <%= product.specs %>
                                             </h3>
                                             <h4 class="product-price">
                                             $<%= Number(product.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -154,7 +154,7 @@ document.querySelector(".tablink").click();
                                             <%= product.category === 'smarttv' ? 'SmartTV' : product.category.charAt(0).toUpperCase() + product.category.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= product.nombre %><%= product.especificaciones %>
+                                                <%= product.nombre %><%= product.specs %>
                                             </h3>
                                             <h4 class="product-price">
                                             $<%= Number(product.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -389,7 +389,7 @@ document.querySelector(".tablink").click();
                                             <%= product.category === 'tablets' ? 'Tablets' : product.category.charAt(0).toUpperCase() + product.category.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= product.nombre %> <%= product.especificaciones %>
+                                                <%= product.nombre %> <%= product.specs %>
                                             </h3>
                                             <h4 class="product-price">
                                             $<%= Number(product.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -538,7 +538,7 @@ document.querySelector(".tablink").click();
 
                             <div class="product-body">
                                 <p class="product-category"><%= product.category || 'Sin categoría' %></p>
-                                <h3 class="product-name"><%= product.nombre %> <%= product.especificaciones %></h3>
+                                <h3 class="product-name"><%= product.nombre %> <%= product.specs %></h3>
 
                                 <h4 class="product-price">
                                     $<%= Number(product.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
