--- a/src/views/store/comparison.ejs
+++ b/src/views/store/comparison.ejs
@@ -14,7 +14,7 @@
     <div class="container-comparison">
       <h1 class="tittle-comparison">Comparador de Dispositivos Móviles</h1>
       <p class="description-comparison">
-        Compara especificaciones clave para tomar la mejor decisión.
+        Compara specs clave para tomar la mejor decisión.
       </p>
 
       <div class="search-comparison">
