--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -77,7 +77,7 @@
 								<label for="category-<%= category.category_id %>">
 									<span></span>
 									<%= category.category %>
-										<small>(<%= category.cantidad %>)</small>
+										<small>(<%= category.count %>)</small>
 								</label>
 							</div>
 						<% }); %>
@@ -119,7 +119,7 @@
 								<label for="brand-<%= brand.brand_id %>">
 									<span></span>
 									<%= brand.brand %>
-									<small>(<%= brand.cantidad %>)</small>
+									<small>(<%= brand.count %>)</small>
 								</label>
 							</div>
 						<% }); %>
@@ -176,7 +176,7 @@
 														</div>
 														<div class="product-body">
 															<p class="product-category"><%= producto.category %></p>
-															<h3 class="product-name"><%= producto.nombre %> <%= producto.especificaciones %></h3>
+															<h3 class="product-name"><%= producto.nombre %> <%= producto.specs %></h3>
 															<h4 class="product-price">
 															$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
 															<% if (producto.descuento > 0) { %>
