--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -76,7 +76,7 @@
                 <tbody>
                     <% order.items.forEach(item => { %>
                         <tr>
-                            <td><%= item.nombre_producto %> <%= item.especificaciones %></td>
+                            <td><%= item.nombre_producto %> <%= item.specs %></td>
                             <td><%= item.colorSeleccionado.toUpperCase() %></td>
                             <td><%= item.cantidad %></td>
                             <td>$<%= Number(item.precio_unitario).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
