--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -114,16 +114,16 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                     <button class="add-to-cart-btn"
                                     data-id="<%= product.id %>"
-                                    data-variante_id="<%= product.variante_id %>"
+                                    data-variantId="<%= product.variantId %>"
                                     data-color="<%= product.color %>"
                                     data-ram="<%= product.ram %>"
-                                    data-almacenamiento="<%= product.almacenamiento %>"
+                                    data-storage="<%= product.storage %>"
                                     data-stock="<%= product.stock %>"
-                                    data-nombre="<%= product.nombre %>"
-                                    data-precio="<%= product.precio %>"
-                                    data-descuento="<%= product.descuento %>"   
-                                    data-impuesto="<%= product.impuesto %>"       
-                                    data-imagen="<%= product.imagen %>">
+                                    data-name="<%= product.name %>"
+                                    data-price="<%= product.price %>"
+                                    data-discount="<%= product.discount %>"   
+                                    data-tax="<%= product.tax %>"       
+                                    data-image="<%= product.image %>">
                                 <i class="fa fa-shopping-cart"></i> Añadir al carrito
                             </button>
                             </div>                      
