Solo falta order

--- a/public/css/store/fav.css
+++ b/public/css/store/fav.css
@@ -22,7 +22,7 @@
     border-bottom: none;
 }
 
-.product-imagen {
+.product-image {
     width: 100px;        
     height: 100px;
     overflow: hidden;  
